--- a/DataTableApp/src/app/app.component.html
+++ b/DataTableApp/src/app/app.component.html
@@ -182,5 +182,7 @@
 <p>Export as XLSX by clicking the below button</p>
 <button (click)="exportAsXLSX()"><i style="font-size:16px;color:blue"> click</i></button>
 
+<!--<p>Export as XLSX by clicking the below button</p>
+<button (click)="exportAsXLSX()"><i style="font-size:16px;color:blue"> click</i></button>-->
 
 <!-- [ngClass]="{'highlight': selectedRowIndex == row.id}" -->
