--- a/DataTableApp/src/app/app.component.html
+++ b/DataTableApp/src/app/app.component.html
@@ -178,9 +178,9 @@
   [pageSizeOptions]="[5, 25, 50]" [showFirstLastButtons]="true" [hidePageSize]="true" >
   </mat-paginator>
 </div> 
-
+<div>
 <p>Export as XLSX by clicking the below button</p>
 <button (click)="exportAsXLSX()"><i style="font-size:16px;color:blue"> click</i></button>
-
+</div>
 
 <!-- [ngClass]="{'highlight': selectedRowIndex == row.id}" -->
